fix: [CDS-99267]: Add constant white to pill color for light and dark mode

--- a/packages/uicore/src/components/Toggle/Toggle.css
+++ b/packages/uicore/src/components/Toggle/Toggle.css
@@ -6,11 +6,11 @@
  */
 
 .toggle {
-  --toggle-background-color: var(--white);
+  --toggle-background-color: var(--grey-100);
   --toggle-border-color: #c7c9d9; /* grey-200 too light and grey-250/300 too dark */
   --toggle-pill-size: var(--spacing-4);
-  --toggle-pill-color: var(--toggle-border-color); /* Needs to be consistent in light and dark mode */
-  --toggle-pill-shadow: 0 1px 2px var(--grey-200), 0 2px 4px var(--grey-200);
+  --toggle-pill-color: #ffffff; /* Needs to be consistent in light and dark mode */
+  --toggle-pill-shadow: 0 1px 2px rgba(40, 41, 61, 0.2), 0 2px 4px rgba(96, 97, 112, 0.2);
 
   line-height: 1rem;
   font-size: var(--font-size-small);
@@ -47,9 +47,6 @@
   justify-content: flex-end;
   --toggle-background-color: var(--primary-7);
   --toggle-border-color: var(--primary-7);
-}
-.input:checked ~ .toggleIcon::before {
-  --toggle-pill-color: var(--white);
 }
 
 .input:disabled ~ .toggleIcon {
